// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`other-appeals GET /other-appeals/add should render the "What is the appeal reference?" page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <form method="POST">
        <div class="govuk-form-group">
            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> What is the appeal reference?</label></h1>
            <input class="govuk-input govuk-input--width-10" id="add-other-appeals-reference"
            name="addOtherAppealsReference" type="text">
        </div>
        <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
        id="filters-submit">Continue</button>
    </form>
</main>"
`;

exports[`other-appeals GET /other-appeals/confirm should render the "Related appeal details" page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal APP/Q9999/D/21/351062</span>
                    <h1                     class="govuk-heading-xl govuk-!-margin-bottom-3">Related appeal details</h1>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-!-margin-top-5 govuk-!-margin-bottom-6">
                    <table class="govuk-table">
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Appeal reference</strong>
                                </td>
                                <td class="govuk-table__cell">12345</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Appeal type</strong>
                                </td>
                                <td class="govuk-table__cell">Planning Appeal (W)</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Site address</strong>
                                </td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Local planning authority (LPA)</strong>
                                </td>
                                <td class="govuk-table__cell">Bristol City Council</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Appellant name</strong>
                                </td>
                                <td class="govuk-table__cell">Mr John Wick</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Agent name</strong>
                                </td>
                                <td class="govuk-table__cell">Mr John Smith (Smith Planning Agency)</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Do you want to relate these appeals?</legend>
                        <div class="govuk-radios"
                        data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="relate-appeals-answer" name="relateAppealsAnswer"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer">Yes, relate this appeal to APP/Q9999/D/21/351062</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="relate-appeals-answer-2" name="relateAppealsAnswer"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer-2">No, return to search</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals GET /other-appeals/manage should render the "Do you want to remove the relationship?" page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Do you want to remove the relationship between appeal 2 and appeal 351062?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship" name="removeAppealRelationship"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship-2" name="removeAppealRelationship"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals GET /other-appeals/manage should render the "Do you want to remove the relationship?" page with the error if the answer was not provided 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#remove-appeal-relationship">You must answer if you want to remove the relationship</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Do you want to remove the relationship between appeal 2 and appeal 351062?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship" name="removeAppealRelationship"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship-2" name="removeAppealRelationship"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals GET /other-appeals/manage should render the "Manage related appeals" page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Manage related appeals</h1>
        </div>
    </div>
    <h2 class="govuk-!-margin-top-6">Related appeals</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header">Appeal Reference</th>
                <th scope="col" class="govuk-table__header">Appeal type</th>
                <th scope="col" class="govuk-table__header">Action</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/2" aria-label="Appeal 2">2</a>
                </td>
                <td class="govuk-table__cell">Unknown</td>
                <td class="govuk-table__cell"><a class="govuk-link" data-cy="remove-appeal-APP/Q9999/D/21/351062" href="/appeals-service/appeal-details/1/other-appeals/remove/2/100">Remove</a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="" aria-label="Appeal 3">3 (Horizon)</a>
                </td>
                <td class="govuk-table__cell">Unknown</td>
                <td class="govuk-table__cell"><a class="govuk-link" data-cy="remove-appeal-APP/Q9999/D/21/351062" href="/appeals-service/appeal-details/1/other-appeals/remove/3/101">Remove</a>
                </td>
            </tr>
        </tbody>
    </table>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "What is the appeal reference?" page with error "Enter a valid appeal reference", if the provided appeal reference was invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Enter a valid appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <form method="POST">
        <div class="govuk-form-group">
            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> What is the appeal reference?</label></h1>
            <input class="govuk-input govuk-input--width-10" id="add-other-appeals-reference"
            name="addOtherAppealsReference" type="text" value="7654321">
        </div>
        <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
        id="filters-submit">Continue</button>
    </form>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "What is the appeal reference?" page with error "Enter an appeal reference", if no appeal reference was provided 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Enter an appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <form method="POST">
        <div class="govuk-form-group">
            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> What is the appeal reference?</label></h1>
            <input class="govuk-input govuk-input--width-10" id="add-other-appeals-reference"
            name="addOtherAppealsReference" type="text">
        </div>
        <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
        id="filters-submit">Continue</button>
    </form>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "What is the appeal reference?" page with the expected error, if the provided appeal reference is greater than 7 digits 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Appeal reference must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <form method="POST">
        <div class="govuk-form-group">
            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> What is the appeal reference?</label></h1>
            <input class="govuk-input govuk-input--width-10" id="add-other-appeals-reference"
            name="addOtherAppealsReference" type="text" value="12345678">
        </div>
        <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
        id="filters-submit">Continue</button>
    </form>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "What is the appeal reference?" page with the expected error, if the provided appeal reference is less than 7 digits 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Appeal reference must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <form method="POST">
        <div class="govuk-form-group">
            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> What is the appeal reference?</label></h1>
            <input class="govuk-input govuk-input--width-10" id="add-other-appeals-reference"
            name="addOtherAppealsReference" type="text" value="123456">
        </div>
        <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
        id="filters-submit">Continue</button>
    </form>
</main>"
`;

exports[`other-appeals POST /other-appeals/confirm should re-render the "Related appeal details" page with the error if the answer was not provided 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#relate-appeals-answer">You must answer if you want to relate appeals</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal APP/Q9999/D/21/351062</span>
                    <h1                     class="govuk-heading-xl govuk-!-margin-bottom-3">Related appeal details</h1>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-!-margin-top-5 govuk-!-margin-bottom-6">
                    <table class="govuk-table">
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Appeal reference</strong>
                                </td>
                                <td class="govuk-table__cell">12345</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Appeal type</strong>
                                </td>
                                <td class="govuk-table__cell">Planning Appeal (W)</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Site address</strong>
                                </td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Local planning authority (LPA)</strong>
                                </td>
                                <td class="govuk-table__cell">Bristol City Council</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Appellant name</strong>
                                </td>
                                <td class="govuk-table__cell">Mr John Wick</td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell"><strong>Agent name</strong>
                                </td>
                                <td class="govuk-table__cell">Mr John Smith (Smith Planning Agency)</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Do you want to relate these appeals?</legend>
                        <div class="govuk-radios"
                        data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="relate-appeals-answer" name="relateAppealsAnswer"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer">Yes, relate this appeal to APP/Q9999/D/21/351062</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="relate-appeals-answer-2" name="relateAppealsAnswer"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer-2">No, return to search</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
